immutable storedconfigimpl